--- a/app/src/main/res/layout/activity_edit_registro.xml
+++ b/app/src/main/res/layout/activity_edit_registro.xml
@@ -27,12 +27,6 @@
                     android:text="@string/despesa"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editTxtPago"
-                    android:text="@string/naoPago"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
             </LinearLayout>
 
             <LinearLayout
@@ -137,6 +131,11 @@
                     android:layout_height="wrap_content"
                     android:text="@string/salvar"
                     android:id="@+id/btnSalvarLancamento"/>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/deletar"
+                    android:id="@+id/btnDeletarLancamento"/>
 
                 <Button
                     android:layout_width="wrap_content"
