--- a/app/src/main/res/layout/activity_edit_registro.xml
+++ b/app/src/main/res/layout/activity_edit_registro.xml
@@ -31,6 +31,18 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+                <ToggleButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editTgBtnPago"
+                    android:textOff="@string/naoPago"
+                    android:textOn="@string/pago"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
